--- a/EGHV/Localization/en_US/Frontend_Text.xml
+++ b/EGHV/Localization/en_US/Frontend_Text.xml
@@ -249,25 +249,25 @@
             <Text>Improved sight</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_IMPROVED_SIGHT_DESC" Language="en_US">
-            <Text>This unit receives + 1 [ICON_Movement] sight.</Text>
+            <Text>The discovering unit(s) receive(s) +1 [ICON_Ability] sight.</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_IMPROVED_HEALING_NAME" Language="en_US">
             <Text>Improved healing</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_IMPROVED_HEALING_DESC" Language="en_US">
-            <Text>This unit receives additional healing per turn.</Text>
+            <Text>The discovering unit(s) receive(s) +20 [ICON_Ability] healing per turn, if applicable.</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_IMPROVED_MOVEMENT_NAME" Language="en_US">
             <Text>Improved movement</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_IMPROVED_MOVEMENT_DESC" Language="en_US">
-            <Text>This unit receives + 1 [ICON_Movement] movement.</Text>
+            <Text>The discovering unit(s) receive(s) +1 [ICON_Movement] movement.</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_IMPROVED_STRENGTH_NAME" Language="en_US">
             <Text>Improved strength</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_IMPROVED_STRENGTH_DESC" Language="en_US">
-            <Text>This unit receives + 5 [ICON_Strength] combat strength in all situations.</Text>
+            <Text>The discovering unit(s) receive(s) +10 [ICON_Strength] combat strength in all situations, if applicable.</Text>
         </Replace>
         <!-- faith type -->
         <Replace Tag="LOC_EGHV_GOODYHUT_FAITH_ONE_RELIC_NAME" Language="en_US">
@@ -321,66 +321,66 @@
         </Replace>
         <!-- support military type -->
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_BATTERING_RAM_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] Battering Ram</Text>
+            <Text>1 [ICON_Unit] support unit</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_BATTERING_RAM_DESC" Language="en_US">
-            <Text>Receive one (1) free [ICON_Unit] Battering Ram in the nearest city.</Text>
+            <Text>Receive one (1) free [ICON_Unit] Era-appropriate support unit in a nearby plot.</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_CATAPULT_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] Catapult</Text>
+            <Text>1 [ICON_Unit] siege unit</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_CATAPULT_DESC" Language="en_US">
-            <Text>Receive one (1) free [ICON_Unit] Catapult in the nearest city.</Text>
+            <Text>Receive one (1) free [ICON_Unit] Era-appropriate siege unit in a nearby plot.</Text>
         </Replace>
-        <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_MEDIC_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] Medic</Text>
+        <!-- <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_MEDIC_NAME" Language="en_US">
+            <Text>1 [ICON_Unit] Medic</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_MEDIC_DESC" Language="en_US">
             <Text>Receive one (1) free [ICON_Unit] Medic in the nearest city.</Text>
-        </Replace>
+        </Replace> -->
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_MILITARY_ENGINEER_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] Military Engineer</Text>
+            <Text>1 [ICON_Unit] Military Engineer</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_MILITARY_ENGINEER_DESC" Language="en_US">
-            <Text>Receive one (1) free [ICON_Unit] Military Engineer in the nearest city.</Text>
+            <Text>Receive one (1) free [ICON_Unit] Military Engineer in a nearby plot.</Text>
         </Replace>
         <!-- cavalry military type -->
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_HEAVY_CHARIOT_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] Heavy Chariot</Text>
+            <Text>1 [ICON_Unit] heavy cavalry unit</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_HEAVY_CHARIOT_DESC" Language="en_US">
-            <Text>Receive one (1) free [ICON_Unit] Heavy Chariot in the nearest city.</Text>
+            <Text>Receive one (1) free [ICON_Unit] Era-appropriate heavy cavalry unit in a nearby plot.</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_HORSEMAN_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] Horseman</Text>
+            <Text>1 [ICON_Unit] light cavalry unit</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_HORSEMAN_DESC" Language="en_US">
-            <Text>Receive one (1) free [ICON_Unit] Horseman in the nearest city.</Text>
+            <Text>Receive one (1) free [ICON_Unit] Era-appropriate light cavalry unit in a nearby plot.</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_SPEARMAN_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] Spearman</Text>
+            <Text>1 [ICON_Unit] anti-cavalry unit</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_SPEARMAN_DESC" Language="en_US">
-            <Text>Receive one (1) free [ICON_Unit] Spearman in the nearest city.</Text>
+            <Text>Receive one (1) free [ICON_Unit] Era-appropriate anti-cavalry unit in a nearby plot.</Text>
         </Replace>
         <!-- military type -->
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_SLINGER_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] ranged unit</Text>
+            <Text>1 [ICON_Unit] ranged unit</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_SLINGER_DESC" Language="en_US">
-            <Text>Receive one (1) free [ICON_Unit] ranged unit in the nearest city.</Text>
+            <Text>Receive one (1) free [ICON_Unit] Era-appropriate ranged unit in a nearby plot.</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_WARRIOR_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] melee unit</Text>
+            <Text>1 [ICON_Unit] melee unit</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_WARRIOR_DESC" Language="en_US">
-            <Text>Receive one (1) free [ICON_Unit] melee unit in the nearest city.</Text>
+            <Text>Receive one (1) free [ICON_Unit] Era-appropriate melee unit in a nearby plot.</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_SCOUT_NAME" Language="en_US">
-            <Text>1 free [ICON_Unit] recon unit</Text>
+            <Text>1 [ICON_Unit] recon unit</Text>
         </Replace>
         <Replace Tag="LOC_EGHV_GOODYHUT_MILITARY_GRANT_SCOUT_DESC" Language="en_US">
-            <Text>Receive one (1) free [ICON_Unit] recon unit in the nearest city.</Text>
+            <Text>Receive one (1) free [ICON_Unit] Era-appropriate recon unit in a nearby plot.</Text>
         </Replace>
         <!-- science type -->
         <Replace Tag="LOC_EGHV_GOODYHUT_SCIENCE_TWO_TECHS_NAME" Language="en_US">
