--- a/EGHV/Localization/en_US/Frontend_WondrousGoodyHuts_Text.xml
+++ b/EGHV/Localization/en_US/Frontend_WondrousGoodyHuts_Text.xml
@@ -13,80 +13,80 @@
 		</Replace> -->
 		<!-- random resource -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMRESOURCE_NAME" Language="en_US">
-			<Text>Find new resource</Text>
+			<Text>Find New Resource</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMRESOURCE_DESC" Language="en_US">
-			<Text>Discover a new random resource in your territory.</Text>
+			<Text>Discover a new resource in a random plot in territory controlled by the Player.</Text>
 		</Replace>
 		<!-- random unit -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_NAME" Language="en_US">
-			<Text>1 random unique unit</Text>
+			<Text>1 Unique Unit</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_DESC" Language="en_US">
-			<Text>Receive one (1) random unique unit.</Text>
+			<Text>Receive one (1) random unique unit, possibly one which is unique to a Civilization other than the Player's.</Text>
 		</Replace>
 		<!-- random improvement -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_NAME" Language="en_US">
-			<Text>1 random improvement</Text>
+			<Text>1 Improvement</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_DESC" Language="en_US">
-			<Text>Receive one (1) random improvement, possibly one which is unique to another Civilization.</Text>
+			<Text>Receive one (1) random improvement, possibly one which is unique to a Civilization other than the Player's.</Text>
 		</Replace>
 		<!-- sight bomb -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_NAME" Language="en_US">
 			<Text>[ICON_Ability] Wilderness Training</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_DESC" Language="en_US">
-			<Text>Your unit receives [ICON_Ability] Wilderness Training (+2 sight, can see through features).</Text>
+			<Text>The receiving unit is granted the [ICON_Ability] Wilderness Training ability (+2 sight, can see through features).</Text>
 		</Replace>
 		<!-- random policy -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMPOLICY_NAME" Language="en_US">
-			<Text>1 random [ICON_Policy] Policy</Text>
+			<Text>1 [ICON_Policy] Policy</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMPOLICY_DESC" Language="en_US">
-			<Text>Receive one (1) random [ICON_Policy] Policy from the current Era.</Text>
+			<Text>Unlock one (1) random [ICON_Policy] Policy from the current Era.</Text>
 		</Replace>
 		<!-- formation -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_NAME" Language="en_US">
 			<Text>Upgrade [ICON_Corps] Formation</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_DESC" Language="en_US">
-			<Text>Your unit has its [ICON_Corps] Formation upgraded.</Text>
+			<Text>The receiving unit has its [ICON_Corps] Formation upgraded.</Text>
 		</Replace>
 		<!-- natural wonder -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_WONDER_NAME" Language="en_US">
 			<Text>Reveal Natural Wonder</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_WONDER_DESC" Language="en_US">
-			<Text>Discover a new natural wonder.</Text>
+			<Text>Discover an unrevealed natural wonder.</Text>
 		</Replace>
 		<!-- city-state -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_CITYSTATE_NAME" Language="en_US">
 			<Text>Meet City-State</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_CITYSTATE_DESC" Language="en_US">
-			<Text>Discover a new city-state.</Text>
+			<Text>Discover an unmet city-state.</Text>
 		</Replace>
 		<!-- spy -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SPY_NAME" Language="en_US">
-			<Text>1 free Spy</Text>
+			<Text>1 [ICON_Unit] Spy</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SPY_DESC" Language="en_US">
 			<Text>Receive one (1) free Spy unit.</Text>
 		</Replace>
 		<!-- production boost -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_NAME" Language="en_US">
-			<Text>[ICON_Production] Production burst</Text>
+			<Text>[ICON_Production] Production Burst</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_DESC" Language="en_US">
-			<Text>Receive a burst of [ICON_Production] Production in your [ICON_Capital] Capital.</Text>
+			<Text>The Player's [ICON_Capital] Capital city receives a burst of [ICON_Production] Production which completes the current item in its Production queue.</Text>
 		</Replace>
 		<!-- teleport -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_NAME" Language="en_US">
-			<Text>World tour</Text>
+			<Text>World Tour</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_DESC" Language="en_US">
-			<Text>Your unit embarks upon an expedition to a faraway tile. It is joined by one (1) free Settler unit.</Text>
+			<Text>The receiving unit embarks upon an expedition to a faraway tile. It is joined by one (1) free Settler unit.</Text>
 		</Replace>
 	</LocalizedText>
 </GameData>
